# Evidex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _inspect_qt_i18n.py  _qt_i18n_codemod.py  build.bat  build.py  evidex_app.py  evidex_qt_app.py  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: RELEASE_CHECKLIST.md
docs/assets/: README.md
evidex/: __init__.py  __main__.py  gui_runtime.py  main.py  signal.py
evidex/components/: __init__.py  datepicker.py  scrollframe.py  tooltip.py  waveform.py
evidex/core/: attachments.py  backup.py  config.py  csv_preview.py  csvio.py  fields.py  filtering.py  fsio.py  i18n.py  icons.py  media.py  nocode_adapter.py  pack_ops.py  record_table.py  schema.py  series_table.py  settings.py  steps_table.py  table_style.py  windows.py
evidex/locales/: en.json  ja.json
evidex/mixins/: __init__.py  data.py  helpers.py  nav.py  pane.py  prefs.py  search.py  theme.py  tree.py
evidex/packs/: __init__.py
evidex/qt_app/: __init__.py  detail.py  dialogs.py  filtering.py  main_window.py  navigation.py  popout.py  record_dialog.py  record_ops.py  schema_adapter.py  schema_display.py  schema_editor_dialog.py  schema_fields.py  schema_packs.py  series_dialog.py  steps_dialog.py  table_view.py  theme.py  theming.py  (+2 more)
tests/: conftest.py  test_atomic_io.py  test_backup_prune.py  test_base_dir.py  test_csv_preview.py  test_public.py  test_qt_i18n.py  test_qt_imports.py  test_qt_widgets.py  test_record_table.py  test_run_editor_layout.py  test_schema_layout.py  test_series_table.py  test_steps_table.py  test_table_style.py
(+29 files in other folders)
